<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScanDemoExample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginText">ورود به اتوماسیون</string>
    <string name="userNameText">نام کاربری</string>
    <string name="getUsernameHint">نام کاربری را وارد کنید</string>
    <string name="loginToAppText">ورود به سامانه</string>
    <string name="appVersionText">1.0.0</string>
    <string name="passwordTextLogin">رمز عبور خود را وارد کنید</string>
    <string name="AlertDialogText">خطا در ورود</string>
    <string name="lorem_ipsum">لورم ایپسوم یا طرح‌نما (به انگلیسی: Lorem ipsum) به متنی آزمایشی و بی‌معنی در صنعت چاپ، صفحه‌آرایی و طراحی گرافیک گفته می‌شود. طراح گرافیک</string>
    <string name="ok">باشه</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nextStep">مرحله بعدی</string>
    <string name="etterTitle">عنوان نامه را وارد کنید</string>
    <string name="enterText">متن نامه را در این قسمت وارد نمایید</string>
    <string name="semat">سمت</string>
    <string name="for_">جهت</string>
    <string name="searchInUSers">جست و جو در کاربران</string>
    <string name="enterFileName">نام فایل را وارد کنید</string>
    <string name="loading">در حال پردازش</string>
    <string name="searchInFile">جست و جو در فایل ها</string>
    <string name="ileName">ام فایل در این قسمت نوشته میشود</string>
    <string name="fileNAme">نام فایل در اینق سمت نوشته میشود</string>
    <string name="doFilter">اعمال فیلتر</string>
    <string name="recieveFilter">فیلتر در دریافتی ها</string>
    <string name="ToDate">تا تاریخ</string>
    <string name="fromDate">از تاریخ</string>
    <string name="senderRole">سمت ارسال کننده</string>
    <string name="senderName">نام ارسال کننده</string>
    <string name="confidentalityLevel">سطح محرمانگی نامه</string>
    <string name="sortBy">مرتب سازی بر اساس</string>
    <string name="urgentType">نوع نامه(فوری عادی و...)</string>
    <string name="searchInTitle">جست و جو در عنوان ها</string>
    <string name="eceiverRole">سمت دریافت کننده</string>
    <string name="receiverName">نام دریافت کننده</string>
    <string name="name">محمد جواد حجتی</string>
    <string name="date">1378/12/10 - 9:30</string>
    <string name="choised">انتخاب شد</string>
    <string name="add">افزودن</string>
    <string name="confirmed">تایید</string>
    <string name="choise">انتخاب</string>
    <string name="senderAddLetter">ارسال کننده</string>
    <string name="send">ارسال</string>
    <string name="draft">پیشنویس</string>
    <string name="SendToOnotherPeople">ارجاع نامه</string>
    <string name="addUser">افزودن کاربر</string>
    <string name="addFile">افزودن فایل</string>
    <string name="searchLetterReceive">جست وجو در نامه های دریافتی</string>
    <string name="emtyStack">خالی کردن</string>
    <string name="learFilter">بازنشانی</string>
    <string name="downloading">درحال دانلود</string>
</resources>
