<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mainApp.letterSingle.action.view.ActionLetterFragment">
    <data>
        <variable
            name="ActionVM"
            type="com.scanner.demo.mainApp.letterSingle.action.viewmodel.ActionVM" />
    </data>
    <FrameLayout
        android:textDirection="rtl"
        android:layoutDirection="rtl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:textDirection="rtl"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/sendAction"
                android:textSize="@dimen/mediumSize"
                android:fontFamily="@font/vazir"
                android:text="@string/send"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/style_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="@dimen/radius"
                app:cardBackgroundColor="@color/lightBlack"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/black"
                app:cardElevation="@dimen/cardElevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:textDirection="rtl"
                    android:layoutDirection="rtl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_edit_text"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="1000"
                        app:cardCornerRadius="@dimen/cardRadius"
                        app:cardElevation="0dp">
                        <LinearLayout
                            android:textDirection="rtl"
                            android:id="@+id/actionBarContent"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_alignParentBottom="true"
                            android:layoutDirection="rtl"
                            android:orientation="horizontal"
                            android:weightSum="1000">
                            <View
                                android:layout_width="1dp"
                                android:layout_height="wrap_content"
                                android:background="@color/white" />
                            <com.chinalwb.are.styles.toolbar.ARE_ToolbarDefault
                                android:id="@+id/areToolbar"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1000"
                                android:background="@color/white"
                                android:gravity="center_vertical"
                                android:padding="2dp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginBottom="7dp">
                        <com.chinalwb.are.AREditText
                            android:id="@+id/arEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginEnd="2dp"
                            android:background="@color/lightBlack"
                            android:fontFamily="@font/vazir"
                            android:gravity="top|start"
                            android:hint="@string/enterText"
                            android:layoutDirection="rtl"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp" />
                    </ScrollView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/choiseUser"
                android:textSize="@dimen/mediumSize"
                android:textColor="@color/white"
                android:fontFamily="@font/vazir"
                android:text="@string/addUser"
                android:background="@drawable/style_add_btn"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/choiseFiles"
                android:textSize="@dimen/mediumSize"
                android:textColor="@color/white"
                android:fontFamily="@font/vazir"
                android:text="@string/addFile"
                android:background="@drawable/style_add_btn"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </FrameLayout>
</layout>
