<?xml version="1.0" encoding="utf-8"?>
<layout
    tools:context=".mainApp.kartable.searchKartable.view.SendSearchFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="SendSearchVM"
            type="com.scanner.demo.mainApp.kartable.searchKartable.viewmodel.SendSearchVM" />
    </data>
    <RelativeLayout
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layoutDirection="rtl"
                android:textDirection="rtl"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/fromDateSearch"
                    android:onClick="@{()-> SendSearchVM.getFromDate(fromDateSearch)}"
                    tools:targetApi="lollipop"
                    android:elevation="@dimen/cardElevation"
                    android:textSize="@dimen/mediumSize"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/white"
                    android:text="@string/fromDate"
                    android:background="@drawable/style_radius"
                    android:layoutDirection="rtl"
                    android:textDirection="rtl"
                    android:fontFamily="@font/vazir"
                    android:layout_weight="50"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    tools:targetApi="lollipop"
                    android:elevation="@dimen/cardElevation"
                    android:textSize="@dimen/mediumSize"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingBottom="10dp"
                    android:id="@+id/toDateSearch"
                    android:onClick="@{()-> SendSearchVM.getToDate(toDateSearch)}"
                    android:paddingTop="10dp"
                    android:textColor="@color/white"
                    android:text="@string/ToDate"
                    android:background="@drawable/style_radius"
                    android:layoutDirection="rtl"
                    android:textDirection="rtl"
                    android:fontFamily="@font/vazir"
                    android:layout_weight="50"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <EditText
                android:text="@={SendSearchVM.receiverRole}"
                tools:targetApi="lollipop"
                android:elevation="@dimen/cardElevation"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/style_edit_text"
                android:textColorHint="@color/gray"
                android:fontFamily="@font/vazir"
                android:hint="@string/eceiverRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <EditText
                android:text="@={SendSearchVM.receiverName}"
                android:inputType="text"
                tools:targetApi="lollipop"
                android:elevation="@dimen/cardElevation"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/style_edit_text"
                android:textColorHint="@color/gray"
                android:fontFamily="@font/vazir"
                android:hint="@string/receiverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:text="@={SendSearchVM.title}"
                android:inputType="text"
                tools:targetApi="lollipop"
                android:elevation="@dimen/cardElevation"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/style_edit_text"
                android:textColorHint="@color/gray"
                android:fontFamily="@font/vazir"
                android:hint="@string/searchInTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.cardview.widget.CardView
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:cardElevation="@dimen/cardElevation"
                app:cardCornerRadius="@dimen/cardRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:paddingStart="10dp"
                    android:id="@+id/confidentalySpinner"
                    android:onClick="@{() -> SendSearchVM.setConfidentialitySpinner(confidentalySpinner,`جست و جو در محرمانگی`)}"
                    app:ms_hint_color="@color/gray"
                    android:hint="جست و جو در محرمانگی"
                    android:fontFamily="@font/vazir"
                    app:ms_hint="جست و جو در محرمانگی"
                    android:textColor="@color/white"
                    android:textSize="@dimen/mediumSize"
                    android:textColorHint="@color/white"
                    android:layoutDirection="rtl"
                    android:textDirection="rtl"
                    app:ms_text_color="@color/white"
                    app:ms_arrow_tint="@color/white"
                    app:ms_background_color="@color/lightBlack"
                    android:background="@color/lightBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>
            <RadioGroup
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layoutDirection="rtl"
                android:textDirection="rtl"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/urgentRB"
                    android:onClick="@{() -> SendSearchVM.setUrgencyData(urgentRB,urgentRB)}"
                    tools:targetApi="lollipop"
                    android:elevation="@dimen/cardElevation"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    app:buttonTint="@color/white"
                    android:background="@drawable/style_radius"
                    android:textDirection="rtl"
                    android:layoutDirection="rtl"
                    android:textColor="@color/white"
                    android:fontFamily="@font/vazir"
                    android:text="فوری"
                    android:layout_weight="50"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/normalRB"
                    android:onClick="@{() -> SendSearchVM.setUrgencyData(urgentRB,urgentRB)}"
                    tools:targetApi="lollipop"
                    android:elevation="@dimen/cardElevation"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    app:buttonTint="@color/white"
                    android:background="@drawable/style_radius"
                    android:textDirection="rtl"
                    android:layoutDirection="rtl"
                    android:textColor="@color/white"
                    android:fontFamily="@font/vazir"
                    android:text="عادی"
                    android:layout_weight="50"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:id="@+id/applyChangeFilter"
            android:onClick="@{() -> SendSearchVM.goToSendKartable(applyChangeFilter)}"
            android:textSize="@dimen/mediumSize"
            android:layout_alignParentBottom="true"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:gravity="center"
            android:background="@color/purple"
            android:fontFamily="@font/vazir"
            android:text="@string/doFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</layout>